Read and verifies